1.分开创建了dev开发环境和，prod：生产环境。2.修复了开发环境中的数据库配置。3.更新了README文档中的启动命令部分呢。并新增了java 虚拟环境参数的说明列表。